@@ -591,10 +591,10 @@ that are likely to prove useful to the Oceanographic community.  (The data types
 need not be restricted to Physical Oceanography, but the author will need some
 help in dealing with other types of data, given his research focus.)
 
-As for algorithms, there are plenty of gaps in \verb@oce@.  Dealing with
-measurements of turbulence is a high priority for the author, for example, and
-it is also clear that there are some methods of ADP processing that should be
-provided by the package.
+As for algorithms, there are plenty of gaps in \verb@oce@.  Dealing
+with measurements of turbulence is a high priority for the author, for
+example, as is improving the functions for processing data from
+pressure-temperature sensors and acoustic Doppler current profilers.
 
 Two principles will guide the addition of data types and functions:
 (a) the need, as perceived by the author or by other contributors and
@@ -711,8 +711,9 @@ he moved to a room without windows, in fear of flying glass.
 <<>>=
 library(oce)
 data(sealevel.hal)
-plot(sealevel.hal, focus.time=c("2003-09-23","2003-10-05"))
-abline(v=as.POSIXct("2003-09-28 23:30:00"), col="red", lty="dotted")
+# Focus on 2003-Sep-28 to 29th, the time when Hurricane Juan caused flooding
+plot(sealevel.hal,which=1,xlim=as.POSIXct(c("2003-09-23","2003-10-05")))
+abline(v=as.POSIXct("2003-09-28 23:30:00"), col="red")
 mtext("Hurricane\nJuan", at=as.POSIXct("2003-09-28 23:30:00"), col="red")
 @
 
